<resources>
    <string name="app_name">TodoApp</string>
    <string name="title">NOTES</string>
    <string name="title_bottom">Advertisement</string>
    <string name="text_btn_back">Back</string>
    <string name="about_menu">About</string>
    <string name="exit_menu">Exit</string>
    <string name="about_program">This program allows you to save your notes. Planing your business and activities. If your will find some bugs or suggestions, please write on this e-mail: vk-andrei@mail.ru</string>
    <string name="about_Ok">OK</string>
    <string name="delete_menu">delete</string>
    <string name="title_toolbar_text">Mine Notes</string>
    <string name="delete_menu_popup">delete</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_new_note_menu">Add  a new note</string>
    <string name="settings_menu">Settings</string>
    <string name="find_menu">Find note</string>
    <string name="email">vk-andrei@mail.ru</string>
    <string name="share_menu">Share</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel_text">UNDO</string>
    <string name="default_title">default title</string>

    <string name="title0">Note 0</string>
    <string name="title1">Note 1</string>
    <string name="title2">Note 2</string>
    <string name="title3">Note 3</string>
    <string name="title4">Note 4</string>
    <string name="title5">Note 5</string>
    <string name="title6">Note 6</string>
    <string name="title7">Note 7</string>

    <string name="description0">Description 0</string>
    <string name="description1">Description 1</string>
    <string name="description2">Description 2</string>
    <string name="description3">Description 3</string>
    <string name="description4">Description 4</string>
    <string name="description5">Description 5</string>
    <string name="description6">Description 6</string>
    <string name="description7">Description 7</string>
    <string name="clear_menu">Clear ALL</string>
    <string name="update_menu_popup">update</string>
    <string name="text_title">title</string>
    <string name="text_description">Description</string>
    <string name="open_calculator">Open Calculator</string>


</resources>