<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_add_new_note"
        android:title="@string/add_new_note_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_action_settings"
        android:title="@string/settings_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_action_about"
        android:title="@string/about_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_action_find"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/find_menu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_action_exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/exit_menu"
        app:showAsAction="never" />

</menu>