<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <group>
        <item
            android:id="@+id/action_drawer_add_new_note"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/add_new_note_menu" />

        <item
            android:id="@+id/action_drawer_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/settings_menu" />

        <item
            android:id="@+id/action_drawer_about"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/about_menu" />
        <item
            android:id="@+id/action_drawer_exit"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/exit_menu" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/action_drawer_share"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/share_menu" />
        </menu>
    </item>
</menu>