<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NoteCardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ID" />

            <TextView
                android:id="@+id/tv_id_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="200" />


        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_title" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_description" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <DatePicker
                android:id="@+id/datePicker_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <Button
                android:id="@+id/btn_fragment_note_Ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:layout_margin="@dimen/default_margin"
                android:text="@string/about_Ok" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>